# Neumann-SDNLP

./: .gitignore  Google-main.ipynb  LICENSE  README.md  package-lock.json  package.json
frontend/: index.html
frontend/scripts/: main.js
frontend/styles/: styles.css
neumann-lm/: package-lock.json  package.json
neumann-lm/frontend/: index.html  main.js  styles.css
neumann-lm/frontend/scripts/: main.js
neumann-lm/frontend/styles/: styles.css
neumann-lm/ml-src/: API_KEY  GPT_OUT  ddpm.py  ddpm_training.py  dset.py  frequirements.txt  gpt_wrapper.py  main.py  model.py  nlp.py  nlp_training.py  nns.py  requirements.txt  vocab.pt
neumann-lm/python/: dset.py  main.py  pyproject.toml
neumann-lm/rust/: tauri.conf.json
neumann-lm/site-src/: index.html  main.js
neumann-lm/src/: index.html  main.js  styles.css
neumann-lm/src-tauri/: Cargo.toml  tauri.conf.json
neumann-lm/webserver-src/: Cargo.toml  tauri.conf.json
neumann-lm/webserver-src/capabilities/: default.json
neumann-lm/webserver-src/src/: lib.rs  prompt_utils.rs
neumann-lm/webserver-src/src/prompt_utils/: read_prompts.rs
neumann-lm/webserver-src/src/server/: app.rs
python/: config.py  gpt_wrapper.py  main.py
python/beautifiers/: info_wrappers.py
python/dataset/: dataset.py
python/ddpm_model/: ddpm_training.py
python/nlp_model/: nlp_training.py
python/resources/: frequirements.txt
python/server/: handle_request.py  server.py
python/tests/: test_model.py  test_paths.py
python/utils/: path_managing.py  tokenization.py
rust/: Cargo.toml
rust/src/: lib.rs  model_run.sh
(+19 files in other folders)
